--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,11 @@
                     </configuration>
                 </plugin>
                 <plugin>
+                      <groupId>org.apache.maven.plugins</groupId>
+                      <artifactId>maven-surefire-plugin</artifactId>
+                      <version>2.22.2</version>
+                </plugin>     
+                <plugin>
                     <groupId>org.codehaus.mojo</groupId>
                     <artifactId>findbugs-maven-plugin</artifactId>
                     <version>${findbugs.version}</version>
