--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,11 @@
                     </configuration>
                 </plugin>
                 <plugin>
+                     <groupId>org.apache.maven.plugins</groupId>
+                     <artifactId>maven-war-plugin</artifactId>
+                     <version>3.0.5/version>
+                 </plugin>
+                <plugin>
                       <groupId>org.apache.maven.plugins</groupId>
                       <artifactId>maven-surefire-plugin</artifactId>
                       <version>2.22.2</version>
